[AAA-FED]: [AAA-80]CTA button/Link: Buttons are getting overlapped in responsive mode, [AAA-78] Footer CTA: Padding/Margin issues, [AAA-99] 50-50 Image and text component is not responsive in IE11, [AAA-98] Page Intro: Top padding for the mobile is not matching requirements. All are only from CSS changes. Refined Responsive stucture and standerds.

--- a/html-prototype/clientlibs/ace-www/base/less/single-column.less
+++ b/html-prototype/clientlibs/ace-www/base/less/single-column.less
@@ -3,15 +3,9 @@ Single column Component
 *****************************************/
 
 .single-column {
-    padding-top: @space-lg;
-    padding-bottom: @space-lg;
-    text-align: center;
-    .horizontal-space2 {
-        margin-bottom: @space-lg - 60;
-    }
+    text-align: center;    
     .image-block {
         max-width: 1300px;
-        padding: 0 70px;
     }
     .img-responsive {
         display: inline-block;
